--- a/requirements.txt
+++ b/requirements.txt
@@ -2,20 +2,29 @@ apispec==6.8.1
 blinker==1.9.0
 click==8.1.8
 colorama==0.4.6
+dnspython==2.7.0
 environs==14.1.0
+exceptiongroup==1.2.2
 Flask==3.1.0
 flask-smorest==0.45.0
 importlib_metadata==8.6.1
+iniconfig==2.0.0
 itsdangerous==2.2.0
 Jinja2==3.1.5
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 marshmallow==3.26.0
 mdurl==0.1.2
+mongoengine==0.29.1
 packaging==24.2
+pluggy==1.5.0
 Pygments==2.19.1
+pymongo==4.11
+pytest==8.3.4
 python-dotenv==1.0.1
+pytz==2025.1
 rich==13.9.4
+tomli==2.2.1
 typing_extensions==4.12.2
 webargs==8.6.0
 Werkzeug==3.1.3
