--- a/requirements.txt
+++ b/requirements.txt
@@ -2,11 +2,18 @@ apispec==6.8.1
 blinker==1.9.0
 click==8.1.8
 colorama==0.4.6
+coverage==7.6.10
 dnspython==2.7.0
+email_validator==2.2.0
 environs==14.1.0
 exceptiongroup==1.2.2
-Flask==3.1.0
-flask-smorest==0.45.0
+Flask==2.2.5
+flask-mongoengine==1.0.0
+flask-smorest==0.42.3
+Flask-WTF==1.2.2
+freezegun==1.5.1
+gunicorn==23.0.0
+idna==3.10
 importlib_metadata==8.6.1
 iniconfig==2.0.0
 itsdangerous==2.2.0
@@ -16,16 +23,23 @@ MarkupSafe==3.0.2
 marshmallow==3.26.0
 mdurl==0.1.2
 mongoengine==0.29.1
+mongomock==4.3.0
 packaging==24.2
+passlib==1.7.4
 pluggy==1.5.0
 Pygments==2.19.1
 pymongo==4.11
 pytest==8.3.4
+pytest-cov==6.0.0
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 pytz==2025.1
 rich==13.9.4
+sentinels==1.0.0
+six==1.17.0
 tomli==2.2.1
 typing_extensions==4.12.2
 webargs==8.6.0
-Werkzeug==3.1.3
+Werkzeug==2.3.3
+WTForms==3.2.1
 zipp==3.21.0
