--- a/requirements.txt
+++ b/requirements.txt
@@ -1,41 +1,62 @@
+anyio==4.8.0
 apispec==6.8.1
 async-timeout==5.0.1
 bcrypt==4.2.1
 blinker==1.9.0
+certifi==2025.1.31
 click==8.1.8
 colorama==0.4.6
+construct==2.10.68
+construct-typing==0.5.6
 coverage==7.6.10
 crontab==1.0.1
+-e git+ssh://git@github.com/VictorCyprien/dao-api.git@2766e6d2c8fb692f2f3a87728f66969a0825ec71#egg=dao_api
 dnspython==2.7.0
 email_validator==2.2.0
 environs==14.1.0
 exceptiongroup==1.2.2
 Flask==2.2.5
+flask-cors==5.0.1
 Flask-JWT-Extended==4.7.1
 flask-mongoengine==1.0.0
 flask-smorest==0.42.3
+Flask-SQLAlchemy==3.1.1
 Flask-WTF==1.2.2
 freezegun==1.5.1
 gunicorn==23.0.0
+h11==0.14.0
+httpcore==1.0.7
+httpx==0.28.1
 idna==3.10
 importlib_metadata==8.6.1
 iniconfig==2.0.0
 itsdangerous==2.2.0
 Jinja2==3.1.5
+jsonalias==0.1.1
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 marshmallow==3.26.0
 mdurl==0.1.2
+mirakuru==2.6.0
 mongoengine==0.29.1
 mongomock==4.3.0
 packaging==24.2
 passlib==1.7.4
 pluggy==1.5.0
+port-for==0.7.4
+psutil==6.1.1
+psycopg==3.2.4
+psycopg2==2.9.10
+psycopg2-binary==2.9.10
 Pygments==2.19.1
 PyJWT==2.9.0
 pymongo==4.11
 pytest==8.3.4
 pytest-cov==6.0.0
+pytest-flask-sqlalchemy==1.1.0
+pytest-mock==3.14.0
+pytest-postgresql==6.1.1
+pytest-sqlalchemy-mock==0.1.7
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 pytz==2025.1
@@ -45,9 +66,14 @@ rq==2.1.0
 rq-scheduler==0.14.0
 sentinels==1.0.0
 six==1.17.0
+sniffio==1.3.1
+solana==0.36.3
+solders==0.23.0
+SQLAlchemy==2.0.38
 tomli==2.2.1
 typing_extensions==4.12.2
 webargs==8.6.0
+websockets==13.1
 Werkzeug==2.3.3
 WTForms==3.2.1
 zipp==3.21.0
