--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,23 @@
+anchorpy==0.20.1
+anchorpy-core==0.2.0
 anyio==4.8.0
 apispec==6.8.1
 async-timeout==5.0.1
+attrs==25.1.0
+base58==2.1.1
+based58==0.1.1
 bcrypt==4.2.1
 blinker==1.9.0
+borsh-construct==0.1.0
 certifi==2025.1.31
+cffi==1.17.1
 click==8.1.8
 colorama==0.4.6
 construct==2.10.68
 construct-typing==0.5.6
 coverage==7.6.10
 crontab==1.0.1
+-e git+ssh://git@github.com/VictorCyprien/dao-api.git@ce81b1e37bc5051a62c1d121ca31976912da347f#egg=dao_api
 dnspython==2.7.0
 email_validator==2.2.0
 environs==14.1.0
@@ -39,6 +47,7 @@ mdurl==0.1.2
 mirakuru==2.6.0
 mongoengine==0.29.1
 mongomock==4.3.0
+more-itertools==8.14.0
 packaging==24.2
 passlib==1.7.4
 pluggy==1.5.0
@@ -47,9 +56,12 @@ psutil==6.1.1
 psycopg==3.2.4
 psycopg2==2.9.10
 psycopg2-binary==2.9.10
+pycparser==2.22
 Pygments==2.19.1
+pyheck==0.1.5
 PyJWT==2.9.0
 pymongo==4.11
+PyNaCl==1.5.0
 pytest==8.3.4
 pytest-cov==6.0.0
 pytest-flask-sqlalchemy==1.1.0
@@ -66,13 +78,16 @@ rq-scheduler==0.14.0
 sentinels==1.0.0
 six==1.17.0
 sniffio==1.3.1
-solana==0.36.3
-solders==0.23.0
+solana==0.35.1
+solders==0.21.0
 SQLAlchemy==2.0.38
+sumtypes==0.1a6
+toml==0.10.2
 tomli==2.2.1
+toolz==0.11.2
 typing_extensions==4.12.2
 webargs==8.6.0
-websockets==13.1
+websockets==10.4
 Werkzeug==2.3.3
 WTForms==3.2.1
 zipp==3.21.0
