--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,8 @@ exceptiongroup==1.2.2
 Flask==2.2.5
 flask-cors==5.0.1
 Flask-JWT-Extended==4.7.1
+flask-pydantic==0.11.0
+flask-pydantic-api==1.5.0
 flask-smorest==0.42.3
 Flask-SQLAlchemy==3.1.1
 Flask-WTF==1.2.2
@@ -41,12 +43,13 @@ mirakuru==2.6.0
 packaging==24.2
 passlib==1.7.4
 pluggy==1.5.0
-port-for==0.7.4
+port-for==0.7.0
 psutil==6.1.1
 psycopg==3.2.4
 psycopg2==2.9.10
 psycopg2-binary==2.9.9
 pycparser==2.22
+pydantic==2.7.2
 Pygments==2.19.1
 PyJWT==2.9.0
 pymongo==4.11
