--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,12 @@ POSTGRESQL_USERNAME=
 POSTGRESQL_PASSWORD=
 POSTGRESQL_DB=
 
+REDIS_URI=
+REDIS_PORT=
+
+WALLET_API_HOST=
+WALLET_API_TIMEOUT=
+
 TEST_DATABASE_URL=postgresql://username:password@localhost:5432/dao-test
 
 JWT_SECRET_KEY=YOUR_JWT_SECRET_KEY
