--- a/requirements.txt
+++ b/requirements.txt
@@ -80,3 +80,7 @@ websockets==13.1
 Werkzeug==2.3.3
 WTForms==3.2.1
 zipp==3.21.0
+# OAuth and token encryption
+cryptography==42.0.6
+Authlib==1.3.0
+requests-oauthlib==1.3.1
