--- a/.env.example
+++ b/.env.example
@@ -17,3 +17,19 @@ TEST_DATABASE_URL=postgresql://username:password@localhost:5432/dao-test
 
 JWT_SECRET_KEY=YOUR_JWT_SECRET_KEY
 JWT_ACCESS_TOKEN_EXPIRES=3600
+
+# OAuth Configuration 
+DISCORD_CLIENT_ID=YOUR_DISCORD_CLIENT_ID
+DISCORD_CLIENT_SECRET=YOUR_DISCORD_CLIENT_SECRET
+DISCORD_REDIRECT_URI=http://localhost:5000/auth/discord/callback
+
+TWITTER_CLIENT_ID=YOUR_TWITTER_CLIENT_ID
+TWITTER_CLIENT_SECRET=YOUR_TWITTER_CLIENT_SECRET
+TWITTER_REDIRECT_URI=http://localhost:5000/auth/twitter/callback
+
+TELEGRAM_BOT_TOKEN=YOUR_TELEGRAM_BOT_TOKEN
+
+# This will be auto-generated if not provided
+# OAUTH_ENCRYPTION_KEY=YOUR_FERNET_ENCRYPTION_KEY
+
+FRONTEND_URL=http://localhost:5173
