--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,25 @@ services:
     volumes:
       - redis_data:/data
 
+  minio:
+    image: minio/minio:latest
+    container_name: minio
+    ports:
+      - "9000:9000"
+      - "9001:9001"
+    volumes:
+      - minio_data:/data
+    environment:
+      MINIO_ROOT_USER: minio
+      MINIO_ROOT_PASSWORD: minio123
+    command: server /data --console-address ":9001"
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:9000/minio/health/live"]
+      interval: 30s
+      timeout: 20s
+      retries: 3
+    restart: always
+
   redis_insight:
     image: redislabs/redisinsight:1.14.0
     container_name: redis_dashboard
@@ -35,3 +54,4 @@ volumes:
   postgres_data:
   redis_data:
   redis_dashboard_volume_data:
+  minio_data:
