--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,36 @@
+annotated-types==0.7.0
 anyio==4.8.0
 apispec==6.8.1
+argon2-cffi==23.1.0
+argon2-cffi-bindings==21.2.0
+asgiref==3.8.1
 async-timeout==5.0.1
+Authlib==1.3.0
 base58==2.1.1
 bcrypt==4.2.1
 blinker==1.9.0
+cachelib==0.9.0
+cachetools==4.2.4
 certifi==2025.1.31
 cffi==1.17.1
+charset-normalizer==3.4.1
 click==8.1.8
 colorama==0.4.6
 construct==2.10.68
 construct-typing==0.5.6
 coverage==7.6.10
 crontab==1.0.1
+cryptography==42.0.6
+-e git+ssh://git@github.com/VictorCyprien/dao-api.git@c6dc7cb0027ef18c9a77f98b1968c315ce383acf#egg=dao_api
 dnspython==2.7.0
 email_validator==2.2.0
 environs==14.1.0
 exceptiongroup==1.2.2
 Flask==2.2.5
+Flask-Caching==2.1.0
 flask-cors==5.0.1
 Flask-JWT-Extended==4.7.1
-flask-pydantic==0.11.0
+Flask-Pydantic==0.11.0
 flask-pydantic-api==1.5.0
 flask-smorest==0.42.3
 Flask-SQLAlchemy==3.1.1
@@ -39,7 +50,9 @@ markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 marshmallow==3.26.0
 mdurl==0.1.2
+minio==7.2.15
 mirakuru==2.6.0
+oauthlib==3.2.2
 packaging==24.2
 passlib==1.7.4
 pluggy==1.5.0
@@ -49,7 +62,9 @@ psycopg==3.2.4
 psycopg2==2.9.10
 psycopg2-binary==2.9.9
 pycparser==2.22
+pycryptodome==3.22.0
 pydantic==2.7.2
+pydantic_core==2.18.3
 Pygments==2.19.1
 PyJWT==2.9.0
 pymongo==4.11
@@ -63,7 +78,11 @@ pytest-sqlalchemy-mock==0.1.7
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 pytz==2025.1
+PyYAML==6.0.2
 redis==5.2.1
+requests==2.31.0
+requests-oauthlib==1.3.1
+responses==0.25.7
 rich==13.9.4
 rq==2.1.0
 rq-scheduler==0.14.0
@@ -75,12 +94,9 @@ solders==0.23.0
 SQLAlchemy==2.0.38
 tomli==2.2.1
 typing_extensions==4.12.2
+urllib3==2.3.0
 webargs==8.6.0
 websockets==13.1
 Werkzeug==2.3.3
 WTForms==3.2.1
 zipp==3.21.0
-# OAuth and token encryption
-cryptography==42.0.6
-Authlib==1.3.0
-requests-oauthlib==1.3.1
